--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install tooling
-      run: apt install jsonschema bats
+      run: sudo apt-get install jsonschema bats
 
     - name: Run tests
       run: run-tests.sh
