--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       run: sudo apt-get install bats
 
     - name: Download justify schema validator
-      run: wget "https://github.com/leadpony/justify/releases/download/v2.1.0/justify-cli-2.1.0.tar.gz" -o justify-cli-2.1.0.tar.gz
+      run: wget "https://github.com/leadpony/justify/releases/download/v2.1.0/justify-cli-2.1.0.tar.gz" -O justify-cli-2.1.0.tar.gz
 
     - name: Install justify schema validator
       run: | 
